[package]
name = "ha"
version = "0.3.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["advancedresearch", "higher", "order", "core"]
description = "Ha provides core structs and traits for programming with higher order structures in Rust"
license = "MIT"
repository = "https://github.com/yuulive/ha.git"
homepage = "https://github.com/yuulive/ha"
documentation = "https://docs.rs/ha"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ha"

[dependencies]
